--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -34,9 +34,10 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git checkout main
           git add package.json
           git commit -m "chore: update version to ${{ steps.version.outputs.VERSION }}" || exit 0
-          git push
+          git push origin main
 
       # - run: pnpm dlx changelogithub
       #   env:
