--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
     "./package.json": "./package.json",
     "./1.6.0": {
       "types": "./index.d.ts",
-      "require": "./lib/1.6.0/index.js",
-      "default": "./lib/1.6.0/index.js"
+      "require": "./lib/1.6.0/wrapper.js",
+      "default": "./lib/1.6.0/wrapper.js"
     },
     "./1.3.2": {
       "types": "./index.d.ts",
-      "require": "./lib/1.3.2/index.js",
-      "default": "./lib/1.3.2/index.js"
+      "require": "./lib/1.3.2/wrapper.js",
+      "default": "./lib/1.3.2/wrapper.js"
     },
     "./1.2.0": {
       "types": "./index.d.ts",
-      "require": "./lib/1.2.0/index.js",
-      "default": "./lib/1.2.0/index.js"
+      "require": "./lib/1.2.0/wrapper.js",
+      "default": "./lib/1.2.0/wrapper.js"
     },
     "./1.0.0": {
       "types": "./index.d.ts",
-      "require": "./lib/1.0.0/index.js",
-      "default": "./lib/1.0.0/index.js"
+      "require": "./lib/1.0.0/wrapper.js",
+      "default": "./lib/1.0.0/wrapper.js"
     }
   },
   "typesVersions": {
